@@ -149,16 +149,8 @@
         <copy todir="${build.dir}/admin">
             <fileset dir="${zencart.src.dir}">
                 <include name="includes/functions/extra_functions/zenmagick_zencart_overrides.php" />
-                <include name="includes/init_includes/overrides/init_templates.php" />
-                <include name="includes/init_includes/overrides/init_languages.php" />
-                <include name="includes/init_includes/overrides/init_authorization.php" />
             </fileset>
         </copy>
-        <!-- patch admin version of overrides/init_languages.php -->
-        <replaceregexp match="\$zmLanguagesBefore = true;" replace="$zmLanguagesBefore = false;" flags="g">
-            <fileset file="${build.dir}/admin/includes/init_includes/overrides/init_templates.php" />
-        </replaceregexp>
-
 
         <!-- remove various files we do not want included -->
         <delete includeemptydirs="true">
@@ -175,19 +167,6 @@
             <fileset dir="${build.dir}" includes="**/*swp" />
             <fileset dir="${build.dir}" includes="**/*.log" />
             <fileset dir="${build.dir}" includes="**/*.db" />
-
-            <!-- experimental stuff -->
-            <fileset dir="${build.dir}">
-                <include name="zenmagick/plugins/init/**" />
-                <exclude name="zenmagick/plugins/init/zm_init_category_path.php" />
-                <exclude name="zenmagick/plugins/init/zm_init_authorization.php" />
-                <exclude name="zenmagick/plugins/init/zm_init_locale.php" />
-            </fileset>
-            <fileset dir="${build.dir}" includes="zenmagick/plugins/admin/zm_promotions/**" />
-            <fileset dir="${build.dir}" includes="zenmagick/plugins/admin/zm_product_features/**" />
-            <fileset dir="${build.dir}" includes="zenmagick/plugins/admin/zm_group_pricing/**" />
-            <fileset dir="${build.dir}" includes="zenmagick/plugins/admin/zm_product_associations/**" />
-            <fileset dir="${build.dir}" includes="zenmagick/plugins/admin/zm_product_tags/**" />
         </delete>
     </target>
 
@@ -240,7 +219,6 @@
         <copy todir="admin">
             <fileset dir="${zencart.src.dir}">
                 <include name="includes/functions/extra_functions/zenmagick_zencart_overrides.php" />
-                <include name="includes/init_includes/overrides/*.php" />
             </fileset>
         </copy>
 
