@@ -1,0 +1,43 @@
+<?php
+/*
+ * ZenMagick - Extensions for zen-cart
+ * Copyright (C) 2006-2009 zenmagick.org
+ *
+ * Portions Copyright (c) 2003 The zen-cart developers
+ * Portions Copyright (c) 2003 osCommerce
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or (at
+ * your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful, but
+ * WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin Street - Fifth Floor, Boston, MA  02110-1301, USA.
+ *
+ * $Id$
+ */
+?>
+<?php
+  
+    // custom code may go either before or after the require
+
+    if (isset($zm_is_init)) {
+        // called by ZenMagick
+        require dirname(dirname(__FILE__)) . "/init_languages.php";
+
+        // load language defines for converted admin pages
+        if ('zmIndex.php' == basename($PHP_SELF)) {
+            $current_page = $_GET['main_page'].'.php';
+            if (file_exists(DIR_WS_LANGUAGES . $_SESSION['language'] . '/' . $current_page)) {
+                include_once (DIR_WS_LANGUAGES . $_SESSION['language'] . '/' . $current_page);
+            }
+        }
+    }
+
+?>
